[tool.poetry]
name = "rag chatbot"
version = "0.1.0"
description = "A Streamlit RAG ChatBot Application"
authors = ["Rajesh T Sivanandan (rsivanandan)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index-llms-ollama = "^0.1.5"
llama-index = "^0.10.47"
chromadb = "^0.5.3"
streamlit = "^1.35.0"
pathlib = "^1.0.1"
llama-index-vector-stores-chroma = "^0.1.9"
llama-index-embeddings-huggingface = "^0.2.2"
llama-index-llms-huggingface = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
